# automata-simulator-cpp

./: AGENTS.md  CMakeLists.txt  Makefile  README.md  paper_context.md  workflow.md
cli/: AutomatonSerializer.cpp  AutomatonSerializer.hpp  config.yaml  main.cpp
config/: defaults.yaml  reproducibility.md
datasets/controls/: README.md
datasets/dna/: README.md  sample.txt
datasets/rna/: README.md  sample.txt  sequence.txt
docs/: COMPLETE_WORKFLOW.md  EFA_EXECUTION_ANALYSIS.md
docs/WORKFLOW/: workflow.md
docs/figures/: README.md
docs/notes/: README.md  pipeline.md
docs/paper/: README.md
include/: AutomatonPlan.hpp  IRunner.hpp  PatternSpec.hpp  TraceEvent.hpp
include/automata/builders/: Builders.hpp
include/automata/runners/: Runners.hpp
include/automata/utils/: MismatchAccounting.hpp  StateSet.hpp
include/evaluation/: EvaluationHarness.hpp
include/modes/: ModeDispatcher.hpp  ModeHeuristics.hpp
include/parser/: Parsers.hpp
include/reporting/: Reporting.hpp
scripts/: run_perf.sh  seed_datasets.py
src/automata/builders/: DfaBuilder.cpp  EfaBuilder.cpp  (+2 more)
src/evaluation/: EvaluationHarness.cpp  PerformanceSweep.cpp
src/modes/: ModeDispatcher.cpp  ModeHeuristics.cpp
src/parser/: DatasetLoader.cpp  DotBracketValidator.cpp  RegexParser.cpp
src/reporting/: MetricsAggregator.cpp  Reporter.cpp  TraceFormatter.cpp
tests/: test_main.cpp
tests/data/: README.md
tests/integration/: EndToEndTests.cpp
tests/unit/: BuilderTests.cpp  ParserTests.cpp  RunnerTests.cpp
tmp/: README.md  dfa.json  efa.json  input.txt  nfa.json  pda.json
(+7 files in other folders)
